# wake-word-detection-esp32s3-xiao

./: CMakeLists.txt
components/hardware_driver/: CMakeLists.txt  Kconfig.projbuild  Kconfig.projbuild.new  esp_board_init.c  idf_component.yml.bak
components/hardware_driver/boards/esp32s3-xiao/: bsp_board.c
components/hardware_driver/boards/include/: bsp_board.h  esp32_s3_xiao_board.h
components/hardware_driver/include/: esp_board_init.h
main/: CMakeLists.txt  main.c
